--- a/src/app/pages/add/add.page.html
+++ b/src/app/pages/add/add.page.html
@@ -16,13 +16,25 @@
   </ion-list>
 
   <ion-list>
-    <ion-list-header>
+    <ion-list-header *ngIf="list.items.length > 0">
       <ion-label>Registros</ion-label>
     </ion-list-header>
 
-    <ion-item *ngFor="let item of list.items">
-      <ion-checkbox slot="start" [(ngModel)]="item.completed"></ion-checkbox>
-      <ion-label>{{item.name}} {{item.money}}</ion-label>
-    </ion-item>
+    <ion-item-sliding *ngFor="let item of list.items; let i = index">
+
+      <ion-item>
+        <ion-checkbox slot="start" 
+                      [(ngModel)]="item.completed"
+                      (ionChange)="changeCheck(item)"></ion-checkbox>
+        <ion-label>{{item.name}} {{item.money}}</ion-label>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option (click)="deleteItem(i)" color="danger">
+          <ion-icon slot="icon-only" name="close"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+
+    </ion-item-sliding>
   </ion-list>
 </ion-content>
