--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -7,11 +7,7 @@
 </ion-header>
 
 <ion-content>
-    <ion-list>
-      <ion-item *ngFor="let item of recordService.list" detail>
-        <ion-label>{{item.title}}</ion-label>
-      </ion-item>
-    </ion-list>
+    <app-list [total]="false"></app-list>
 
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
       <ion-fab-button (click)="addList()">
