--- a/src/app/pages/add/add.page.html
+++ b/src/app/pages/add/add.page.html
@@ -10,8 +10,15 @@
 <ion-content>
   <ion-list>
     <ion-item>
-      <ion-label position="floating">Nuevo item</ion-label>
+      <ion-label>Total: {{list.total}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Nombre</ion-label>
       <ion-input type="text" [(ngModel)]="nameItem" (keyup.enter)="addItem()"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Cantidad</ion-label>
+      <ion-input type="number" [(ngModel)]="moneyItem" (keyup.enter)="addItem()"></ion-input>
     </ion-item>
   </ion-list>
 
