--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -2,12 +2,12 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="clipboard"></ion-icon>
+      <ion-icon name="list"></ion-icon>
       <ion-label>Lista</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="bicycle-outline"></ion-icon>
+      <ion-icon name="checkmark-circle"></ion-icon>
       <ion-label>Total</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
